[gd_scene load_steps=4 format=3 uid="uid://c86oklgxhesux"]

[ext_resource type="Script" path="res://addons/kamran_wali/duniya_skapare/duniya_skapare_setup.gd" id="1_3oh7k"]
[ext_resource type="PackedScene" uid="uid://cphspo0fltqev" path="res://addons/kamran_wali/duniya_skapare/name_input.tscn" id="2_t3amt"]
[ext_resource type="PackedScene" uid="uid://bjgtxq5gjlk5m" path="res://addons/kamran_wali/duniya_skapare/check_box_data.tscn" id="3_wve8n"]

[node name="duniya_skapare_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3oh7k")

[node name="MainScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollHolder" type="Control" parent="MainScrollContainer"]
custom_minimum_size = Vector2(1152, 648)
layout_mode = 2

[node name="MainContainer" type="VBoxContainer" parent="MainScrollContainer/ScrollHolder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NoOHolder" type="Control" parent="MainScrollContainer/ScrollHolder/MainContainer"]
custom_minimum_size = Vector2(1152, 25)
layout_mode = 2

[node name="Label" type="Label" parent="MainScrollContainer/ScrollHolder/MainContainer/NoOHolder"]
layout_mode = 1
offset_right = 151.0
offset_bottom = 26.0
text = "Number of Objects:"

[node name="OB_NoO" type="OptionButton" parent="MainScrollContainer/ScrollHolder/MainContainer/NoOHolder"]
layout_mode = 1
offset_left = 152.0
offset_right = 210.0
offset_bottom = 20.0
item_count = 3
selected = 0
popup/item_0/text = "1"
popup/item_0/id = 0
popup/item_1/text = "2"
popup/item_1/id = 1
popup/item_2/text = "3"
popup/item_2/id = 2

[node name="NameInputContainer" type="VBoxContainer" parent="MainScrollContainer/ScrollHolder/MainContainer"]
layout_mode = 2

[node name="name_input" parent="MainScrollContainer/ScrollHolder/MainContainer/NameInputContainer" instance=ExtResource("2_t3amt")]
layout_mode = 2

[node name="name_input2" parent="MainScrollContainer/ScrollHolder/MainContainer/NameInputContainer" instance=ExtResource("2_t3amt")]
visible = false
layout_mode = 2

[node name="name_input3" parent="MainScrollContainer/ScrollHolder/MainContainer/NameInputContainer" instance=ExtResource("2_t3amt")]
visible = false
layout_mode = 2

[node name="ConditionHolder" type="Control" parent="MainScrollContainer/ScrollHolder/MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ListVerticalsContainer" type="VBoxContainer" parent="MainScrollContainer/ScrollHolder/MainContainer/ConditionHolder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameHorizontalContainer" type="Control" parent="MainScrollContainer/ScrollHolder/MainContainer/ConditionHolder/ListVerticalsContainer"]
clip_contents = true
custom_minimum_size = Vector2(1152, 75)
layout_mode = 2

[node name="H_Name1" type="Label" parent="MainScrollContainer/ScrollHolder/MainContainer/ConditionHolder/ListVerticalsContainer/NameHorizontalContainer"]
layout_mode = 2
offset_left = 200.0
offset_top = 60.0
offset_right = 256.0
offset_bottom = 86.0
rotation = -0.736529
text = "Give Name"

[node name="H_Name2" type="Label" parent="MainScrollContainer/ScrollHolder/MainContainer/ConditionHolder/ListVerticalsContainer/NameHorizontalContainer"]
visible = false
layout_mode = 2
offset_left = 230.0
offset_top = 60.0
offset_right = 288.0
offset_bottom = 86.0
rotation = -0.736529
text = "Give Name"

[node name="H_Name3" type="Label" parent="MainScrollContainer/ScrollHolder/MainContainer/ConditionHolder/ListVerticalsContainer/NameHorizontalContainer"]
visible = false
layout_mode = 2
offset_left = 260.0
offset_top = 60.0
offset_right = 318.0
offset_bottom = 86.0
rotation = -0.736529
text = "Give Name"

[node name="Data1" type="HBoxContainer" parent="MainScrollContainer/ScrollHolder/MainContainer/ConditionHolder/ListVerticalsContainer"]
layout_mode = 2

[node name="V_Name1" type="Label" parent="MainScrollContainer/ScrollHolder/MainContainer/ConditionHolder/ListVerticalsContainer/Data1"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Give Name"
horizontal_alignment = 2
autowrap_mode = 2

[node name="check_box_data" parent="MainScrollContainer/ScrollHolder/MainContainer/ConditionHolder/ListVerticalsContainer/Data1" instance=ExtResource("3_wve8n")]
layout_mode = 2

[node name="Data2" type="HBoxContainer" parent="MainScrollContainer/ScrollHolder/MainContainer/ConditionHolder/ListVerticalsContainer"]
visible = false
layout_mode = 2

[node name="V_Name2" type="Label" parent="MainScrollContainer/ScrollHolder/MainContainer/ConditionHolder/ListVerticalsContainer/Data2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Give Name"
horizontal_alignment = 2
autowrap_mode = 2

[node name="check_box_data" parent="MainScrollContainer/ScrollHolder/MainContainer/ConditionHolder/ListVerticalsContainer/Data2" instance=ExtResource("3_wve8n")]
layout_mode = 2

[node name="check_box_data2" parent="MainScrollContainer/ScrollHolder/MainContainer/ConditionHolder/ListVerticalsContainer/Data2" instance=ExtResource("3_wve8n")]
layout_mode = 2

[node name="Data3" type="HBoxContainer" parent="MainScrollContainer/ScrollHolder/MainContainer/ConditionHolder/ListVerticalsContainer"]
visible = false
layout_mode = 2

[node name="V_Name3" type="Label" parent="MainScrollContainer/ScrollHolder/MainContainer/ConditionHolder/ListVerticalsContainer/Data3"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Give Name"
horizontal_alignment = 2
autowrap_mode = 2

[node name="check_box_data" parent="MainScrollContainer/ScrollHolder/MainContainer/ConditionHolder/ListVerticalsContainer/Data3" instance=ExtResource("3_wve8n")]
layout_mode = 2

[node name="check_box_data2" parent="MainScrollContainer/ScrollHolder/MainContainer/ConditionHolder/ListVerticalsContainer/Data3" instance=ExtResource("3_wve8n")]
layout_mode = 2

[node name="check_box_data3" parent="MainScrollContainer/ScrollHolder/MainContainer/ConditionHolder/ListVerticalsContainer/Data3" instance=ExtResource("3_wve8n")]
layout_mode = 2

[connection signal="item_selected" from="MainScrollContainer/ScrollHolder/MainContainer/NoOHolder/OB_NoO" to="." method="_on_ob_no_o_item_selected"]
